syntax = "proto3";
package proto;
option go_package = ".;proto";

service Plumber {
  rpc PlumberLinks(PlumberRequest) returns(PlumberResponse) ;
  rpc PlumberExchange(PlumberRequest) returns(PlumberResponse) ;
  rpc PlumberDisconnect(PlumberRequest) returns(PlumberResponse) ;
}

message PlumberRequest {
  bytes data = 1;
  string addr = 2;
}

message PlumberResponse {
  bytes data = 1;
}